# grpc-trading-server

./: Cargo.toml  build.rs
proto/: order.proto
src/: client.rs  main.rs
