[package]
name = "trading-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clob-engine = "0.1.1"
prost = "0.14.3"
tonic = "0.14.3"
tokio = {version = "1.49.0", features = ["rt-multi-thread", "sync"]}
anyhow = "1.0.101"
tonic-prost = "*"

[build-dependencies]
tonic-prost-build = "0.14.3"

[[bin]]
name = "user"
path = "src/client.rs"

