[package]
name = "trading-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clob-engine = "0.3.3"
prost = "0.14.3"
tonic = "0.14.3"
tokio = {version = "1.49.0", features = ["rt-multi-thread", "sync"]}
anyhow = "1.0.101"
tonic-prost = "*"
uuid = {version = "1.20.0", features = ["v4"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
rand = "0.10.0"
orderbook-proto = "0.1.3"

[build-dependencies]
tonic-prost-build = "0.14.3"

[[bin]]
name = "user"
path = "src/client.rs"

